--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,12 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
 # Go workspace file
 go.work
 
 ### Go Patch ###
 /vendor/
 /Godeps/
+
+# GoReleaser
+dist/
